[package]
name = "rust_init"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.12"
tokio = { version = "1", features = ["full"] }  
tonic = "0.5"  
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0" 
redis = { version = "0.27.2", features = ["tokio-rustls-comp", "tls-rustls-insecure"] }
config = "0.13"
